--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0f243a</color>
+    <color name="colorPrimary">#0F243A</color>
     <color name="colorPrimaryDark">#080f1b</color>
     <color name="colorAccent">#528bcc</color>
+    <color name="windowBackground">#ebedf0</color>
 </resources>
