--- a/app/src/main/res/layout/group_page_row.xml
+++ b/app/src/main/res/layout/group_page_row.xml
@@ -62,44 +62,14 @@
             app:layout_constraintTop_toBottomOf="@+id/group_avatar_list" />
 
         <LinearLayout
-            android:id="@+id/link"
+            android:id="@+id/attachments"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/link_borders"
             android:orientation="vertical"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/post_text">
+            app:layout_constraintTop_toBottomOf="@+id/post_text" />
 
-            <ImageView
-                android:id="@+id/link_image"
-                android:layout_width="match_parent"
-                android:visibility="gone"
-                android:layout_height="130dp"/>
-
-            <TextView
-                android:id="@+id/link_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginRight="8dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
-
-            <TextView
-                android:id="@+id/link_url"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="8dp"
-                android:ellipsize="end"
-                android:singleLine="true"/>
-        </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
