--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#080f1b</color>
     <color name="colorAccent">#528bcc</color>
     <color name="windowBackground">#ebedf0</color>
+    <color name="ic_launcher_background">#FFFFFF</color>
 </resources>
