--- a/app/src/main/res/layout/simple_link.xml
+++ b/app/src/main/res/layout/simple_link.xml
@@ -6,7 +6,9 @@
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/content_margin"
     android:layout_marginTop="8dp"
+    android:layout_marginRight="@dimen/content_margin"
     android:background="@drawable/link_borders"
     android:orientation="vertical">
 
