--- a/app/src/main/res/layout/group_page_row.xml
+++ b/app/src/main/res/layout/group_page_row.xml
@@ -27,7 +27,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/content_margin_half"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="@+id/group_avatar_list"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
             android:id="@+id/post_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/content_margin_half"
             android:text="TextView"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
             app:layout_constraintEnd_toEndOf="parent"
