--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="app_bar_height">120dp</dimen>
     <dimen name="content_margin">16dp</dimen>
+    <dimen name="content_margin_half">8dp</dimen>
 </resources>
