--- a/app/src/main/res/drawable/link_borders.xml
+++ b/app/src/main/res/drawable/link_borders.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-
     <stroke
-        android:width="1dp"
+        android:width="@dimen/link_borders_stroke"
         android:color="@color/windowBackground" />
 
 </shape>
