--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#0F243A</color>
     <color name="colorPrimaryDark">#080f1b</color>
     <color name="colorAccent">#528bcc</color>
-    <color name="windowBackground">#ebedf0</color>
+    <color name="windowBackground">#EBEDF0</color>
     <color name="ic_launcher_background">#FFFFFF</color>
 </resources>
