--- a/app/src/main/res/layout/activity_post_comments.xml
+++ b/app/src/main/res/layout/activity_post_comments.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".PostCommentsActivity">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/content_post_comments"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </android.support.constraint.ConstraintLayout>
