--- a/app/src/main/res/layout/comment_row.xml
+++ b/app/src/main/res/layout/comment_row.xml
@@ -66,4 +66,10 @@
 
     </android.support.constraint.ConstraintLayout>
 
+    <LinearLayout
+        android:id="@+id/attachments"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+
 </LinearLayout>
