--- a/app/src/main/res/layout/group_page_header.xml
+++ b/app/src/main/res/layout/group_page_header.xml
@@ -15,6 +15,7 @@
             android:id="@+id/group_avatar"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
