--- a/app/src/main/res/layout/simple_photo.xml
+++ b/app/src/main/res/layout/simple_photo.xml
@@ -10,5 +10,6 @@
     <ImageView
         android:id="@+id/photo_image"
         android:layout_width="match_parent"
-        android:layout_height="190dp" />
+        android:layout_height="190dp"
+        android:scaleType="centerCrop" />
 </LinearLayout>
