--- a/app/src/main/res/layout/simple_video.xml
+++ b/app/src/main/res/layout/simple_video.xml
@@ -15,7 +15,8 @@
         <ImageView
             android:id="@+id/video_image"
             android:layout_width="match_parent"
-            android:layout_height="190dp" />
+            android:layout_height="190dp"
+            android:scaleType="centerCrop" />
 
         <ImageView
             android:id="@+id/imageView"
